--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-499.8KB/s(Youtube:不良林), server: 5.183.176.84, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.13MB/s(Youtube:不良林), server: 5.183.176.83, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-417.7KB/s(Youtube:不良林), server: 5.183.176.91, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-811.1KB/s(Youtube:不良林), server: 5.183.176.84, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-715.6KB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-358.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-564.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-561.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-690.3KB/s(Youtube:不良林), server: 5.183.176.83, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-571.8KB/s(Youtube:不良林), server: 5.183.176.80, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-667.3KB/s(Youtube:不良林), server: 89.31.126.147, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-735.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-417.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-811.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
