--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-358.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-564.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-561.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-690.3KB/s(Youtube:不良林), server: 5.183.176.83, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-571.8KB/s(Youtube:不良林), server: 5.183.176.80, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-667.3KB/s(Youtube:不良林), server: 89.31.126.147, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-735.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: 194.156.231.251, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-571.4KB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-3.07MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-935.2KB/s(Youtube:不良林), server: 89.31.126.147, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-312.3KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.25MB/s(Youtube:不良林), server: 89.31.126.147, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: 89.31.126.147, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 89.31.126.147, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-358.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-564.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-690.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-571.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-667.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-735.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-882.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-571.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-935.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-312.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
