--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.35MB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-760.2KB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-156.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-883.6KB/s(Youtube:不良林), server: 5.183.176.91, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇬🇧 英国-624.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-1.71MB/s(Youtube:不良林), server: 185.172.113.243, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.21MB/s(Youtube:不良林), server: 5.183.176.91, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-665.9KB/s(Youtube:不良林), server: 5.183.176.94, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-600.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.03MB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-380.2KB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-446.6KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.46MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.21MB/s(Youtube:不良林), server: 5.183.176.91, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-883.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-446.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-665.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
